added html elements for nav bar including logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Howdy Y'all</h1>
+  <header>
+    <nav>
+      <img src="img/wds_logo.png" alt="Web Dev Simplified Logo">
+      <ul>
+        <li><a href="#"></a>Curriculum</li>
+        <li><a href="#"></a>Pricing</li>
+        <li><a href="#"></a>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
 </body>
 </html>
