stylized header and inserted hero

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="full-screen-header">
+    <nav class="nav nav-top">
       <img src="img/wds_logo.png" alt="Web Dev Simplified Logo">
       <ul>
         <li><a href="#"></a>Curriculum</li>
@@ -17,6 +17,10 @@
         <li><a href="#"></a>Contact</li>
       </ul>
     </nav>
+    <h1>WDS Bootcamp</h1>
+    <span>From No Stack to Full Stack</span>
+    <a href="#">Learn More</a>
+    <img src="img/arrow_down.svg" alt="Scroll Down Icon">
   </header>
 
 </body>
