--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <header class="full-screen-header">
     <nav class="nav nav-top">
-      <img src="img/wds_logo.png" alt="Web Dev Simplified Logo">
-      <ul>
-        <li><a href="#"></a>Curriculum</li>
-        <li><a href="#"></a>Pricing</li>
-        <li><a href="#"></a>Contact</li>
+      <img class="logo" src="img/wds_logo.png" alt="Web Dev Simplified Logo">
+      <ul class="nav-list">
+        <li><a href="#">Curriculum</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
     <h1>WDS Bootcamp</h1>
