completed stylising the full screen header

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <ul class="nav-list">
         <li><a href="#">Curriculum</a></li>
         <li><a href="#">Pricing</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a class="btn" a href="#">Contact</a></li>
       </ul>
     </nav>
-    <h1>WDS Bootcamp</h1>
-    <span>From No Stack to Full Stack</span>
-    <a href="#">Learn More</a>
-    <img src="img/arrow_down.svg" alt="Scroll Down Icon">
+    <h1 class="title">WDS Bootcamp</h1>
+    <span class="sub-title">From No Stack to Full Stack</span>
+    <a class="btn" href="#">Learn More</a>
+    <img class="scroll-down-icon" src="img/arrow_down.svg" alt="Scroll Down Icon">
   </header>
 
 </body>
