--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
     <a class="btn" href="#">Learn More</a>
     <img class="scroll-down-icon" src="img/arrow_down.svg" alt="Scroll Down Icon">
   </header>
+  <main>
+    <section class="section">
+      <h2 class="section-title">Curriculum</h2>
+      <div class="curriculum-grid">
+        <div class="curriculum-grid-item">
+          <img src="img/html_icon.svg" alt="HTML 5 Icon">
+          <p>Start with the basics by learning HTML/CSS to build your first website</p>
+        </div>
+         <div class="curriculum-grid-item">
+          <img src="img/node_js_icon.svg" alt="Node JavaScript Icon">
+          <p>Build interactive web applications with the world's most popular backend</p>
+        </div>
+        <div class="curriculum-grid-item">
+          <img src="img/vscode_icon.svg" alt="Visual Studio Code Icon">
+          <p>Use the latest technology for editing and creating amazing web applications</p>
+        </div>
+        <div class="curriculum-grid-item">
+          <img src="img/database_icon.svg" alt="Database Icon">
+          <p>Manage application data by learning SQL and NoSQL database architecture</p>
+        </div>
+        <div class="curriculum-grid-item">
+          <img src="img/edit_page_icon.svg" alt="Web Page Edit Page Icon">
+          <p>Create stunning designs by using modern design tools like Figma and Sketch</p>
+        </div>
+        <div class="curriculum-grid-item">
+          <img src="img/react_icon.svg" alt="React Icon">
+          <p>Use the most popular frontend framework to create modern PWAs</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
