Free section stylized

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </div>
       </div>
     </section>
+    <section class="section section-accent">
+      <h2 class="section-title free-title">Free</h2>
+      <p class="free-sub-title">That's right! All of this amazing content is available completely for free on Youtube!</p>
+    </section>
   </main>
 
 </body>
