added content area with submit button

--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
       <h2 class="section-title free-title">Free</h2>
       <p class="free-sub-title">That's right! All of this amazing content is available completely for free on Youtube!</p>
     </section>
+    <section class="section section-title">
+      <h2 class="contact-title">Contact</h2>
+      <form class="form">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email">
+        <label for="message">Message</label>
+        <textarea name="message" id="message"></textarea>
+        <button class="btn" type="submit">Send</button>
+      </form>
+    </section>
   </main>
 
 </body>
