contact section css completed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         <input type="email" name="email" id="email">
         <label for="message">Message</label>
         <textarea name="message" id="message"></textarea>
-        <button class="btn" type="submit">Send</button>
+        <div class="btn-container">
+          <button class="btn btn-square" type="submit">Send</button>
+        </div>
       </form>
     </section>
   </main>
