mock website complete!

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2 class="section-title free-title">Free</h2>
       <p class="free-sub-title">That's right! All of this amazing content is available completely for free on Youtube!</p>
     </section>
-    <section class="section section-title">
+    <section class="section section-title2">
       <h2 class="contact-title">Contact</h2>
       <form class="form">
         <label for="name">Name</label>
@@ -71,6 +71,15 @@
       </form>
     </section>
   </main>
-
+  <footer>
+    <nav class="nav">
+      <img class="logo" src="img/wds_logo.png" alt="Web Dev Simplified Logo">
+      <ul class="nav-list">
+        <li><a href="#">Curriculum</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a class="btn" a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
